chore(ui): build lang packs

--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -1,5 +1,9 @@
 [
   {
+    "isoName": "ar-TN",
+    "nativeName": "العربية (تونس)"
+  },
+  {
     "isoName": "ar",
     "nativeName": "العربية"
   },
