add Myanmar(Burmese) language

--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -144,6 +144,10 @@
     "nativeName": "മലയാളം"
   },
   {
+    "isoName": "mm",
+    "nativeName": "မြန်မာ(ဗမာ)"
+  },
+  {
     "isoName": "ms",
     "nativeName": "Bahasa Melayu"
   },
