--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -132,6 +132,10 @@
     "nativeName": "മലയാളം"
   },
   {
+    "isoName": "mm",
+    "nativeName": "မြန်မာ(ဗမာ)"
+  },
+  {
     "isoName": "ms",
     "nativeName": "Bahasa Melayu"
   },
