feat(ui): update lang sets

--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -192,6 +192,10 @@
     "nativeName": "Slovenski Jezik"
   },
   {
+    "isoName": "sm",
+    "nativeName": "Fa'asāmoa"
+  },
+  {
     "isoName": "sr-CYR",
     "nativeName": "српски језик"
   },
