feat(ui): (backport from Qv2) update ko-kr

--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -180,6 +180,10 @@
     "nativeName": "Slovenski Jezik"
   },
   {
+    "isoName": "sm",
+    "nativeName": "Fa'asāmoa"
+  },
+  {
     "isoName": "sr",
     "nativeName": "srpski jezik"
   },
