--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -128,6 +128,10 @@
     "nativeName": "Latviešu valoda"
   },
   {
+    "isoName": "mk",
+    "nativeName": "Македонски"
+  },
+  {
     "isoName": "ml",
     "nativeName": "മലയാളം"
   },
