--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -37,7 +37,7 @@
   },
   {
     "isoName": "de-DE",
-    "nativeName": "Deutsch"
+    "nativeName": "Deutsch (DE)"
   },
   {
     "isoName": "de",
