--- a/ui/lang/index.json
+++ b/ui/lang/index.json
@@ -32,6 +32,14 @@
     "nativeName": "Dansk"
   },
   {
+    "isoName": "de-CH",
+    "nativeName": "Deutsch (CH)"
+  },
+  {
+    "isoName": "de-DE",
+    "nativeName": "Deutsch (DE)"
+  },
+  {
     "isoName": "de",
     "nativeName": "Deutsch"
   },
