feat(ui/app-vite/app-webpack): force methods to contain params & returns (even if null)

--- a/ui/src/plugins/lang/Lang.json
+++ b/ui/src/plugins/lang/Lang.json
@@ -1093,11 +1093,13 @@
           "desc": "Required for SSR only",
           "__exemption": [ "examples" ]
         }
-      }
+      },
+      "returns": null
     },
 
     "getLocale": {
       "desc": "Get the browser locale ISO name; Returns undefined when it cannot determine current browser locale or when running on server in SSR mode",
+      "params": null,
       "returns": {
         "type": [ "String", "undefined" ],
         "desc": "Browser locale ISO name",
